--- a/app/src/main/res/layout/activity_forgot_password_teacher.xml
+++ b/app/src/main/res/layout/activity_forgot_password_teacher.xml
@@ -10,15 +10,20 @@
         android:id="@+id/textView15"
         android:layout_width="247dp"
         android:layout_height="64dp"
+        android:layout_marginStart="50dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="57dp"
         android:text="Change Password"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textSize="25sp"
         android:textStyle="bold"
         android:typeface="sans"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="50dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView16"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPassword4"
@@ -39,13 +44,14 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="207dp"
+        android:layout_marginBottom="8dp"
         android:text="New Password"
         android:textAllCaps="true"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="149dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView17"
@@ -57,6 +63,7 @@
         android:text="Repeat Password"
         android:textAllCaps="true"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword4" />
@@ -70,6 +77,7 @@
         android:layout_marginEnd="38dp"
         android:ems="10"
         android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/BTNenterclass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
