--- a/app/src/main/res/layout/activity_qrscan.xml
+++ b/app/src/main/res/layout/activity_qrscan.xml
@@ -11,13 +11,11 @@
         android:layout_width="345dp"
         android:layout_height="50dp"
         android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toTopOf="@+id/CameraPreview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent">
 
         <EditText
             android:id="@+id/ETcode"
@@ -32,25 +30,32 @@
     <androidx.camera.view.PreviewView
         android:id="@+id/CameraPreview"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_marginBottom="129dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="450dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/BTNenterclass"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/BTNenterclass"
         android:layout_width="326dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="11dp"
-        android:layout_marginBottom="49dp"
         android:text="Enter Class"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CameraPreview"
-        app:layout_constraintVertical_bias="1.0" />
+        tools:layout_editor_absoluteY="616dp" />
+
+    <TextView
+        android:id="@+id/TVstudentname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="casual"
+        android:text="StudentName"
+        android:textSize="35sp"
+        tools:layout_editor_absoluteX="62dp"
+        tools:layout_editor_absoluteY="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
