--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -90,7 +90,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/kidImage" />
 
     <TextView
         android:id="@+id/forgot_pass_stu"
@@ -120,7 +120,7 @@
         app:layout_constraintTop_toBottomOf="@+id/BTNstulogin" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/kidImage"
         android:layout_width="183dp"
         android:layout_height="147dp"
         android:layout_marginStart="89dp"
